--- a/TFC/imports/UI/about.html
+++ b/TFC/imports/UI/about.html
@@ -7,5 +7,26 @@
     <br>
     <h2 class="title is-2 has-text-centered">Notre équipe</h2>
     <br>
+    <div class="columns">
+        <div class="column has-text-centered">
+            <figure class="image is-128x128" style="margin: 0 auto;">
+                <img class="is-rounded" src="Evan.jpg">
+            </figure>
+            <p>Evan</p>
+        </div>
 
+        <div class="column has-text-centered">
+            <figure class="image is-128x128" style="margin: 0 auto;">
+                <img class="is-rounded" src="Reza.png">
+            </figure>
+            <p>Reza</p>
+        </div>
+
+        <div class="column has-text-centered">
+            <figure class="image is-128x128" style="margin: 0 auto;">
+                <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+            </figure>
+            <p>Henri</p>
+        </div>
+    </div>
 </template>
