edit product modifications check, contributions updated for edits

--- a/TFC/imports/UI/moderation/editProductModeration.html
+++ b/TFC/imports/UI/moderation/editProductModeration.html
@@ -127,7 +127,7 @@
                         </div>
                     </div>
                 {{else}}
-                    <p>Pas de modification de l'image de catégories</p>
+                    <p class="has-text-centered">Pas de modification des catégories</p>
                 {{/if}}
 
 
