--- a/TFC/imports/UI/moderation/moderation.html
+++ b/TFC/imports/UI/moderation/moderation.html
@@ -1,4 +1,6 @@
 <template name="moderation">
+    <h3 class="title is-3 has-text-centered">Modération</h3>
+
     {{#each displayModeration}}
         {{> moderationBanner}}
     {{/each}}
