--- a/TFC/imports/UI/user/contributions.html
+++ b/TFC/imports/UI/user/contributions.html
@@ -1,6 +1,6 @@
 <template name="contributions">
 
-    <table class="table is-bordered is-striped is-hoverable">
+    <table class="table is-bordered is-striped is-hoverable" style="margin: 4rem auto;">
         <thead>
             <tr>
                 <th>Date</th>
