points added and bugs fixes

--- a/TFC/imports/UI/moderation/editProductModeration.html
+++ b/TFC/imports/UI/moderation/editProductModeration.html
@@ -96,7 +96,7 @@
                                 </div>
                             {{/each}}
                         {{else}}
-                            <p>Pas de modification de l'image de couverture</p>
+                            <p>Pas de modification des images supplémentaires</p>
                         {{/if}}
                     </div>
                 </div>
